framework/tests/framework/MissingSymbolCrash.java
// :: error: (type.checking.not.run)
public class MissingSymbolCrash {
    public void test() {
        // :: error: cannot find symbol
        lst.add(s);
    }
}
